# agents-security-demo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  QUICK_SETUP.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SUMMARY.md  package.json  pyproject.toml  requirements.txt  security-utils.js  security_utils.py
.github/: dependabot.yml
.github/workflows/: security.yml
